fix: adjust height on mobile mode

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -65,6 +65,7 @@
 @media(max-width: $mobile-breakpoint) {
   .card {
     flex-direction: column;
+    height: auto;
 
     img {
       width: 100%;
